--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
 	<div class="conteiner">
-		<div class="chess left-1"></div>
+		<div class="chess left-1"><img src="img/chess.png" alt=""></div>
 		<div class=" left-2"></div>
-		<div class="chess left-3"></div>
+		<div class="chess left-3"><img src="img/chess.png" alt=""></div>
 		<div class=" left-4"></div>
-		<div class="chess left-5"></div>
+		<div class="chess left-5"><img src="img/chess.png" alt=""></div>
 		<div class=" left-6"></div>
-		<div class="chess left-7"></div>
+		<div class="chess left-7"><img src="img/chess.png" alt=""></div>
 		<div class=" left-8"></div>
 
 		<div class="top-1 left-1"></div>
-		<div class="chess top-1 left-2"></div>
+		<div class="chess top-1 left-2"><img src="img/chess.png" alt=""></div>
 		<div class="top-1 left-3"></div>
-		<div class="chess top-1 left-4"></div>
+		<div class="chess top-1 left-4"><img src="img/chess.png" alt=""></div>
 		<div class="top-1 left-5"></div>
-		<div class="chess top-1 left-6"></div>
+		<div class="chess top-1 left-6"><img src="img/chess.png" alt=""></div>
 		<div class="top-1 left-7"></div>
-		<div class="chess top-1 left-8"></div>
+		<div class="chess top-1 left-8"><img src="img/chess.png" alt=""></div>
 
-		<div class="chess top-2 left-1"></div>
+		<div class="chess top-2 left-1"><img src="img/chess.png" alt=""></div>
 		<div class="top-2 left-2"></div>
-		<div class="chess top-2 left-3"></div>
+		<div class="chess top-2 left-3"><img src="img/chess.png" alt=""></div>
 		<div class="top-2 left-4"></div>
-		<div class="chess top-2 left-5"></div>
+		<div class="chess top-2 left-5"><img src="img/chess.png" alt=""></div>
 		<div class="top-2 left-6"></div>
-		<div class="chess top-2 left-7"></div>
+		<div class="chess top-2 left-7"><img src="img/chess.png" alt=""></div>
 		<div class="top-2 left-8"></div>
 
 		<div class="top-3 left-1"></div>
@@ -55,31 +55,31 @@
 		<div class="top-4 left-8"></div>
 
 		<div class="top-5 left-1"></div>
-		<div class="chess top-5 left-2"></div>
+		<div class="chess top-5 left-2"><img src="img/chessB.png" alt=""></div>
 		<div class="top-5 left-3"></div>
-		<div class="chess top-5 left-4"></div>
+		<div class="chess top-5 left-4"><img src="img/chessB.png" alt=""></div>
 		<div class="top-5 left-5"></div>
-		<div class="chess top-5 left-6"></div>
+		<div class="chess top-5 left-6"><img src="img/chessB.png" alt=""></div>
 		<div class="top-5 left-7"></div>
-		<div class="chess top-5 left-8"></div>
+		<div class="chess top-5 left-8"><img src="img/chessB.png" alt=""></div>
 
-		<div class="chess top-6 left-1"></div>
+		<div class="chess top-6 left-1"><img src="img/chessB.png" alt=""></div>
 		<div class="top-6 left-2"></div>
-		<div class="chess top-6 left-3"></div>
+		<div class="chess top-6 left-3"><img src="img/chessB.png" alt=""></div>
 		<div class="top-6 left-4"></div>
-		<div class="chess top-6 left-5"></div>
+		<div class="chess top-6 left-5"><img src="img/chessB.png" alt=""></div>
 		<div class="top-6 left-6"></div>
-		<div class="chess top-6 left-7"></div>
+		<div class="chess top-6 left-7"><img src="img/chessB.png" alt=""></div>
 		<div class="top-6 left-8"></div>
 
 		<div class="top-7 left-1"></div>
-		<div class="chess top-7 left-2"></div>
+		<div class="chess top-7 left-2"><img src="img/chessB.png" alt=""></div>
 		<div class="top-7 left-3"></div>
-		<div class="chess top-7 left-4"></div>
+		<div class="chess top-7 left-4"><img src="img/chessB.png" alt=""></div>
 		<div class="top-7 left-5"></div>
-		<div class="chess top-7 left-6"></div>
+		<div class="chess top-7 left-6"><img src="img/chessB.png" alt=""></div>
 		<div class="top-7 left-7"></div>
-		<div class="chess top-7 left-8"></div>
+		<div class="chess top-7 left-8"><img src="img/chessB.png" alt=""></div>
 	</div>
 </body>
 </html>
