--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="fa">
 </head>
 <body>
-	<div class="gl__conteiner">
+	<div class="glav__conteiner">
 	<div class="conteiner">
 		<div class="chess ">
 			<img src="img/chess.png" alt=""></div>
